--- a/Proyecto1/BancoPersistencia/pom.xml
+++ b/Proyecto1/BancoPersistencia/pom.xml
@@ -13,14 +13,14 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>EcoActvistasDominio</artifactId>
+            <artifactId>BancoDominio</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>19</maven.compiler.source>
-        <maven.compiler.target>19</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <exec.mainClass>com.mycompany.bancopersistencia.BancoPersistencia</exec.mainClass>
     </properties>
 </project>
